remove google analytics

--- a/vha-ig-template/includes/_append.fragment-header.html
+++ b/vha-ig-template/includes/_append.fragment-header.html
@@ -1,5 +1,5 @@
-<div id="jfm-nav"> 
-     <a id="jfm-logo" no-external="true" href="https://johnmoehrke.github.io">
+<div id="va-nav"> 
+     <a id="va-logo" no-external="true" href="https://va.gov">
      <img height="50" alt="VA Organization" src="assets/images/va-header-logo.png"/>
      </a>
 	 </div>
